TEST_PROGRAMS/INVALID/03/invalid_if2.go
package main
func main() {
	if x + y {
	        // statements
	} else if x {

	} 


	if var x = 5; x < 10 {
		
	}
}
